--- a/.htaccess
+++ b/.htaccess
@@ -16,9 +16,9 @@ ExpiresByType image/jpg "access plus 1 year"
 ExpiresByType image/jpeg "access plus 1 year"
 ExpiresByType image/gif "access plus 1 year"
 ExpiresByType image/png "access plus 1 year"
-#ExpiresByType text/css "access plus 1 month"
+ExpiresByType text/css "access plus 1 month"
 ExpiresByType application/pdf "access plus 1 month"
-#ExpiresByType text/x-javascript "access plus 1 month"
+ExpiresByType text/x-javascript "access plus 1 month"
 ExpiresByType application/x-shockwave-flash "access plus 1 month"
 ExpiresByType image/x-icon "access plus 1 year"
 ExpiresDefault "access plus 2 days"
